# telegram-llm-bot

./: .env.example  .gitignore  AGENTS.example.md  README.md  bot.py  extractors.py  extractors_common.py  extractors_content.py  extractors_network.py  extractors_rendering.py  extractors_web.py  inbox_prefetch_cache.py  prompt_profiles.py  pyproject.toml  tagger.py
prompts/: base.md
prompts/models/: gemma-4.md  qwen-3-6.md
src/telegram_llm_bot/: __init__.py  extractors.py  extractors_common.py  extractors_content.py  extractors_network.py  extractors_rendering.py  extractors_web.py  inbox_prefetch_cache.py  prompt_profiles.py  tagger.py  youtube_audio_transcription.py
src/telegram_llm_bot/prompts/: __init__.py  base.md
src/telegram_llm_bot/prompts/models/: __init__.py  qwen-3-6.md
tests/: test_bot.py  test_extractors.py
tests/fixtures/prompts-with-braces/: base.md
