[project]
name = "telegram-llm-bot"
version = "0.1.0"
description = "Telegram bot with LM Studio + Tavily search"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "requests>=2.31",
    "tavily-python>=0.3",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "youtube-transcript-api>=1.0.0",
    "trafilatura>=1.6",
]
